// file: proto/gcommon/v1/database/migration_service.proto
// version: 1.0.1
// guid: e6a810ad-ad41-4afb-9340-84b009cfdd59

edition = "2023";

package database.v1;

import "database/v1/get_migration_status_request.proto";
import "database/v1/get_migration_status_response.proto";
import "database/v1/list_migrations_request.proto";
import "database/v1/list_migrations_response.proto";
import "database/v1/revert_migration_request.proto";
import "database/v1/revert_migration_response.proto";
import "database/v1/run_migration_request.proto";
import "database/v1/run_migration_response.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/database/";

/**
 * MigrationService manages database schema migrations.
 */
service MigrationService {
  // Apply one or more migration scripts
  rpc ApplyMigration(RunMigrationRequest) returns (RunMigrationResponse);

  // Revert to a previous migration version
  rpc RevertMigration(RevertMigrationRequest) returns (RevertMigrationResponse);

  // Retrieve migration status for a database
  rpc GetMigrationStatus(GetMigrationStatusRequest) returns (GetMigrationStatusResponse);

  // List migrations and their status
  rpc ListMigrations(ListMigrationsRequest) returns (ListMigrationsResponse);
}
